Fixing centre alignment of hero text

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -43,8 +43,9 @@
     .title-container
       height: 100%
       margin: auto
-      position: relative
-      top: 200px
+      position: absolute
+      width: 100%
+      top: 15%
 
     .hero-tablet 
       display: none
@@ -388,8 +389,6 @@
     letter-spacing: -0.75px
     text-align: center
     @include font-size(26)
-    +tablet
-      width: 850px
 
   .main-buttons
     .main-button
@@ -452,7 +451,6 @@
 
   @media (max-width: 1087px)
     .synth-section
-      margin-top: 0px 
 
       .section-desc 
         padding: 0 1.5rem
